fix: word spacing change

--- a/src/pages/overview.less
+++ b/src/pages/overview.less
@@ -77,10 +77,24 @@
     }
   }
 }
+.bannerBtn {
+  height: 48px;
+  width: 160px;
+  border-radius: 8px;
+  margin-top: 32px;
+  span {
+    font-size: 16px;
+    color: #ffffff;
+  }
+}
 
 .sloganTitle {
   width: 500px !important;
   margin-top: 100px !important;
+}
+
+.bannerHeigth {
+  height: 529px !important;
 }
 
 @media only screen and (max-width: 767.99px) {
@@ -172,6 +186,13 @@
         }
       }
     }
+  }
+  .bannerBtn {
+    margin-top: 0;
+    position: relative;
+    top: 6.4vw;
+    left: 50%;
+    transform: translateX(-50%);
   }
   .ecoWrapper {
     margin: 0 -120px -12.9vw -120px !important;
