--- a/src/pages/platform.less
+++ b/src/pages/platform.less
@@ -25,7 +25,7 @@
       text-align: center;
       border-radius: 12px;
       width: 379px;
-      padding: 32px;
+      padding: 32px 36px;
       .advantTitle {
         font-weight: 500;
         font-size: 16px;
@@ -58,11 +58,13 @@
 
 .slogandbTitle {
   width: 567px !important;
-  margin-top: 100px !important;
 }
 .sloganplatTitle {
   width: 566px !important;
-  margin-top: 100px !important;
+}
+
+.bannerHeigth {
+  height: 529px !important;
 }
 
 @media only screen and (max-width: 767.99px) {
