--- a/src/pages/platform_en.less
+++ b/src/pages/platform_en.less
@@ -59,13 +59,13 @@
 
 .slogandbTitle {
   width: 567px !important;
-  margin-top: 100px !important;
 }
 .sloganplatTitle {
   width: 600px !important;
-  margin-top: 100px !important;
 }
-
+.bannerHeigth {
+  height: 529px !important;
+}
 @media only screen and (max-width: 767.99px) {
   .containerWrapper {
     transition: all ease 0.3s;
